style fix footer, body and container, build
large repaint issue not animation
change color and pwa: Kushal Kumar
add tailwind purging from future
footer not fixed otherwise overlaps
add container to create pages

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,28 +5,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&display=swap');
 
 body {
-  background: linear-gradient(120deg, #01a0b4, #1098d7);
   background-size: 400% 400%;
-  background-attachment: fixed;
-
-  -webkit-animation: AnimationName 4s ease infinite;
-  -moz-animation: AnimationName 4s ease infinite;
-  animation: AnimationName 4s ease infinite;
+  background: #000046; /* fallback for old browsers */
+  background-image: -webkit-linear-gradient(to right, #1CB5E0, #000046); /* Chrome 10-25, Safari 5.1-6 */
+  background-image: linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-image: -o-linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-image: -ms-linear-gradient(to right, #1CB5E0, #000046); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-clip: content-box;
 }
 
 body, html {
   overflow-x: hidden;
-}
-
-@-webkit-keyframes AnimationName {
-  0%{background-position:0% 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 50%}
-}
-@keyframes AnimationName {
-  0%{background-position:0% 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 50%}
 }
 
 
@@ -35,7 +24,7 @@ body, html {
   padding: 0;
   margin-block: 0;
   margin-inline: 0;
-  font-family: 'Merriweather';
+  font-family: 'Merriweather', sans-serif;
   @apply text-white;
 }
 
